--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <p>Hoster merupakan layanan webhosting statis untuk portfoliomu/project mu. Server menggunakan Ubuntu versi 22.04-x86_64</p>
 
 <p>Untuk mendaftar di hoster silahkan klick link berikut
-<a href="http://ufa.my.id/register">Register</a>.<br>
-Untuk ssupport bantuan hubungi saya
+<a href="http://ufa.my.id/register">ufa.my.id/register</a>.<br>
+ support bantuan hubungi saya/klick link berikut
 <a href="http://rysnanto.eu.org/">Rysnanto</a>.</p>
 
 <p><em>Thank you for using Hoster!</em></p>
