--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>Hoster merupakan layanan webhosting statis untuk portfoliomu/project mu. Server menggunakan Ubuntu versi 22.04-x86_64</p>
 
 <p>Untuk mendaftar di hoster silahkan klick link berikut
-<a href="http://ufa.my.id/register">ufa.my.id/register</a>.<br>
+<a href="http://ufa.my.id/register">ufa.my.id/registrasi.html</a>.<br>
  support bantuan hubungi saya/klick link berikut
 <a href="http://rysnanto.eu.org/">Rysnanto</a>.</p>
 
