--- a/registrasi.html
+++ b/registrasi.html
@@ -10,7 +10,7 @@
         <input type="text" id="nama" name="nama" required><br><br>
         
         <label for="folder">Nama Folder:</label>
-        <input type="text" id="folder" name="folder" required><br><br>
+        <input type="text" id="folder" name="folder_name" required><br><br>
         
         <label for="wa">Nomor WhatsApp:</label>
         <input type="text" id="wa" name="wa" required><br><br>
